[package]
name = "tiktoken_core"
version = "0.4.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "tiktoken_core"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9.1", features = ["serialize", "module"] }
# tiktoken dependencies
fancy-regex = "0.11.0"
regex = "1.8.3"
rustc-hash = "1.1.0"
bstr = "1.5.0"

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
